src/objects/SBam_Group__c.object
<CustomObject>
    <description>These records are for extracts of groups taken from the SBam sandbox to be used for finding groups/policies on the BEO Explore page.</description>
    <fields>
        <fullName>Assigned_Broker__c</fullName>
        <description>This will hold the Reward Account Name tied to the group</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Assigned Broker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Will hold the salesforce id of the record given from the SBam database</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <description>This will hold the funding type for a group. Will either be ASO, FI or ASO &amp; FI.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Funding Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <description>This will be the name of the group related to the group/policy number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>This will be the group number tied to a group name and policy number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Plan_Major__c</fullName>
        <description>This will hold the health plan major for the related Policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Health Plan Major</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Health_Plan_Minor__c</fullName>
        <description>This will hold the health plan minor for the related Policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Health Plan Minor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>This will hold the line of business for the group.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Line of Business</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <description>This will hold the platform for the group.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Platform</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <description>This will hold the policy number related to the group name/number.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Renewal_Date__c</fullName>
        <description>This will hold the policy renewal date for the selected policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>This will hold the region for the group/policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Region</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>This will hold the sales office for the selected policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Office</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Situs_State__c</fullName>
        <description>This will hold the state abbreviation for the selected policy.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Situs State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>SBam Group</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SBam Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SBam Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>